<resources>
    <string name="app_name">Farm Record Store</string>
    <string name="label_search_screen">Search Record</string>
    <string name="label_settings_screen">Settings</string>
    <string name="label_record_details">Record Details</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="navmenu_home">Home</string>
    <string name="navmenu_settings">Settings</string>
    <string name="navmenu_search">Search Records</string>

    <string name="navmenu_new_record">New Record</string>

    <string name="settings">Settings</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="record_saved">Record Saved.</string>
    <string name="record_updated">Record Updated.</string>
    <string name="record_deleted">Record Deleted.</string>
    <string name="not_saved">Not Saved.</string>
    <string name="record_text_hint">Record Details</string>
    <string name="record_title_hint">Record Title</string>
    <string name="next">Next</string>

    <string name="farm_record_store">Farm Record Store</string>
    <string name="open_record">Open Record</string>

    <string name="category_hint">Category: Crop/Livestock/Others</string>
    <string name="last_updated">Last Updated:</string>
    <string name="tv_record_category">Record Category</string>
    <string name="tv_record_title">Record Title</string>
    <string name="ivdescription_delete_record">Delete Record.</string>
    <string name="tv_last_updated_date">Last updated date.</string>
    <string name="ivdescription_record_icon">Record image icon</string>
    <string name="tv_welcome">Welcome!</string>
    <string name="tv_thank_you_text">Thank you for choosing this mobile app.</string>
    <string name="action_new_record">New Record</string>
    <string name="action_search">Search</string>

    <string name="edpref_default_status">This is my status.</string>
    <string name="edpref_dialog_update_status">Update status</string>
    <string name="edpref_status">Status</string>
    <string name="swpref_summary">Change home background color to white.</string>
    <string name="swpref_title">White Home Background</string>

    <string name="prefcat_about">About</string>
    <string name="pref_version">Version</string>
    <string name="pref_developer">Developer</string>
    <string name="pref_released">Released</string>

    <string name="toast_you_are_here">You are here.</string>
    <string name="status_default">This is my status.</string>
    <string name="confirm_record_delete">Are you sure you want to delete this record?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="time_last_updated">Last Updated:\u0020</string>
    <string name="confirmation_delete">Are you sure you want to delete this record?</string>
    <string name="prefcat_general">General</string>
    <string name="pref_version_summary">1.0 (Released: 2021)</string>
    <string name="pref_storage_title">Storage</string>
    <string name="pref_storage_summary">The farm records are stored locally on device memory.</string>

</resources>